checkpoint before massive modification

--- a/headers.tex
+++ b/headers.tex
@@ -36,6 +36,7 @@
 \newcommand{\mean}[1]{\mathbb{E}[#1]}
 \newcommand{\ceil}[1]{\left\lceil#1\right\rceil}
 \newcommand{\Abs}[1]{\left\Vert#1\right\Vert}
+\newcommand{\trace}[1]{\mathrm{Tr}\left(#1\right)}
 
 \newcommand{\bsym}[1]{\boldsymbol{#1}}
 \newcommand{\myord}[1]{{#1}^{\rm{th}}}
@@ -51,25 +52,36 @@
 \newcommand{\vecpi}{\bsym{\pi}}
 \newcommand{\vecx}{\bsym{x}}
 
+\newcommand{\pscr}{\mathscr{P}}
+
 \newcommand{\lap}{\bsym{L}}
 \newcommand{\matd}{\bsym{D}}
 \newcommand{\mata}{\bsym{A}}
 \newcommand{\matb}{\bsym{B}}
 \newcommand{\matw}{\bsym{W}}
 \newcommand{\matp}{\bsym{P}}
+\newcommand{\matpcal}{\bsym{\mathcal{P}}}
 \newcommand{\matf}{\bsym{F}}
-\newcommand{\mate}{\bsym{I}}
+\newcommand{\matfstar}{\bsym{F}^*}
+\newcommand{\mati}{\bsym{I}}
 \newcommand{\matq}{\bsym{Q}}
 \newcommand{\matr}{\bsym{R}}
 \newcommand{\mats}{\bsym{S}}
 \newcommand{\matx}{\bsym{X}}
 \newcommand{\maty}{\bsym{Y}}
 \newcommand{\matz}{\bsym{Z}}
+\newcommand{\matpi}{\bsym{\Pi}}
 
 \newcommand{\lemref}[1]{Lemma~\ref{#1}}
 \newcommand{\thmref}[1]{Theorem~\ref{#1}}
 \newcommand{\probref}[1]{Problem~\ref{#1}}
 \newcommand{\algoref}[1]{Algorithm~\ref{#1}}
+\newcommand{\defref}[1]{Definition~\ref{#1}}
+\newcommand{\secref}[1]{Section~\ref{#1}}
+\newcommand{\tabref}[1]{Table~\ref{#1}}
+\newcommand{\figref}[1]{Figure~\ref{#1}}
+
+\newcommand{\edge}[2]{\langle #1, #2 \rangle}
 
 
 \DeclareMathOperator*{\argmin}{arg\,min}
