--- a/main.bib
+++ b/main.bib
@@ -152,3 +152,28 @@
   number  = {5},
   volume  = {28}
 }
+@article{RaGyZh13,
+  year    = {2013},
+  month   = {9},
+  title   = {{Geometry of complex networks and topological centrality}},
+  author  = {Ranjan, Gyan and Zhang, Zhi-Li},
+  journal = {Physica A: Statistical Mechanics and its Applications},
+  issn    = {0378-4371},
+  doi     = {10.1016/j.physa.2013.04.013},
+  pages   = {3833--3845},
+  number  = {17},
+  volume  = {392}
+}
+
+@article{BoRaZh11,
+  year    = {2011},
+  month   = {7},
+  title   = {{Commute times for a directed graph using an asymmetric Laplacian}},
+  author  = {Boley, Daniel and Ranjan, Gyan and Zhang, Zhi-Li},
+  journal = {Linear Algebra and its Applications},
+  issn    = {0024-3795},
+  doi     = {10.1016/j.laa.2011.01.030},
+  pages   = {224--242},
+  number  = {2},
+  volume  = {435}
+}
